fix(progressbar): update component on mobile display

--- a/app/scss/bootstrap/_progress-bars.scss
+++ b/app/scss/bootstrap/_progress-bars.scss
@@ -46,6 +46,37 @@
   @include transition(width .6s ease);
 }
 
+// BOOSTED MOD for mobile display progressbar is 10px height
+@media all and (max-width: $screen-sm-max) {
+  // Bar itself
+  // -------------------------
+
+  // Outer container
+  .progress {
+    overflow: hidden;
+    height: ($line-height-computed / 2);
+    margin-bottom: ($line-height-computed / 2);
+    background-color: $progress-bg;
+    border-radius: $progress-border-radius;
+    @include box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
+  }
+
+  // Bar of progress
+  .progress-bar {
+    float: left;
+    width: 0%;
+    height: 100%;
+    font-size: $font-size-small;
+    line-height: ($line-height-computed / 2);
+    color: $progress-bar-color;
+    text-align: center;
+    background-color: $progress-bar-bg;
+    @include box-shadow(inset 0 -1px 0 rgba(0,0,0,.15));
+    @include transition(width .6s ease);
+  }
+}
+// END MOD
+
 // Striped bars
 //
 // `.progress-striped .progress-bar` is deprecated as of v3.2.0 in favor of the
